updated flask to have all figures and put in docker

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-Hi!!!!!!
-<img src={{ url_for('static', filename= 'feature_importance_logistic_regression_classifier.png' ) }}>
-    {% for url in links %}
-    {% endfor %}
+<body> 
+    <h1>Community of Practice Session 2 with UCLH</h1>
+    <div class="tip" markdown="1">
+        <p>By Matt Stammers, Catalina Carenzo and Jonny Sheldon</p>
+        <p>Data Courtesy of: https://www.kaggle.com/datasets/joniarroba/noshowappointments</p>
+    </div>
+
+</body>
 {% endblock %}
