--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,15 @@
     </head>
     <hr>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="{{ url_for('index') }}">DNA analysis.</a>
+            <div>
+                <a href="{{ url_for('log_page') }}">Logistic regression</a>
+                <a href="{{ url_for('dt_page') }}">Decision tree</a>
+                <a href="{{ url_for('rf_page') }}">Random forest</a>
+            </div>
+          </nav>
+        <body>
         {% block content %}{% endblock %} 
   </body>
 </html>
