--- a/03_Python_App_and_Poetry/app/templates/index.html
+++ b/03_Python_App_and_Poetry/app/templates/index.html
@@ -12,9 +12,9 @@
     </div>
     <div style="margin: 15px;">
         <h2>What does this app do?</h2>
-        <p>This simple web application analyzes data on patients not turning up to clinic in a Brazilian clinic and uses 3 different models to try and predict non-attendance as a demo for the community of practice of what can be achieved with python, poetry, flask and git.</p>
+        <p>This simple web application analyzes data on patients not turning up to clinic in a Brazilian clinic and uses 3 different models to try and predict non-attendance as a demo for the community of practice of what can be achieved with python, poetry, flask and git. Below. DALL-E Representation of Clinical No-Shows</p>
     </div>
     <!-- Corrected use of url_for for the no-shows image -->
-    <img src="{{ url_for('static', filename='http://localhost:5000/static/images/no-shows.webp') }}" alt="No Shows at Clinic" style="margin-top: 20px; width: 60%; border-radius: 8px;">
+    <img src="https://raw.githubusercontent.com/MattStammers/Community_Of_Practice_Session_Two/debugging/03_Python_App_and_Poetry/app/static/images/no_shows.webp" alt="No Shows at Clinic" style="margin-top: 20px; width: 60%; border-radius: 8px;">
 </div>
 {% endblock %}
