--- a/04_Containerised_App/app/templates/dt_page.html
+++ b/04_Containerised_App/app/templates/dt_page.html
@@ -10,42 +10,70 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@3.0.0-rc12"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
     <script src="https://vega.github.io/datalib/datalib.min.js"></script>
-    <link rel="stlesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/vega-tooltip@0.16.0/vega-tooltip.scss">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/vega-tooltip@0.16.0/vega-tooltip.scss">
     <script src="https://cdn.jsdelivr.net/npm/vega-tooltip@0.16.0/build/vega-tooltip.min.js"></script>
-  </head>
+    <style>
+        /* Custom styles */
+        .header {
+            background-color: #f8f9fa;
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
+        .chart-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
+        }
+        .chart-title {
+            margin-bottom: 20px;
+        }
+        .chart {
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
 <body>
-<div class="first" style="display: block;"></div>
-<h1>Feature Importance</h1>
-    <div class="charts text-center" IMG STYLE="float: left;">
-        <div class="row"><div id="feature"></div></div><hr>
-        <!-- Placeholder for the tooltip -->
-        <div id="vis-tooltip" class="vg-tooltip"></div>
+<div class="container mt-4">
+    <div class="header">
+        <h1 class="text-center">Data Analysis Dashboard</h1>
+        <p class="lead text-center">Explore feature importance and ROC curves</p>
+    </div>
+
+    <div class="chart-container">
+        <h2 class="chart-title text-center">Feature Importance</h2>
+        <div id="feature" class="chart"></div>
+    </div>
+
+    <div class="chart-container">
+        <h2 class="chart-title text-center">ROC Curve</h2>
+        <div class="text-center">
+            <img src="{{ url_for('static', filename='ROC_curve_for_decision_tree_classifier.png') }}" class="img-fluid">
+        </div>
+        <div class="text-center mt-3">
+            <h3>ROC Score: {{ auc }}</h3>
+            <p>This is a weak model. If you feed data into it you will get poor predictions.</p>
         </div>
     </div>
 </div>
-<div class="second" style="display: block;"></div>
-<h1>ROC: {{ auc }}</h1>
-    <div class="charts text-center" IMG STYLE="float: left;">
-        <img src={{ url_for('static', filename= 'ROC_curve_for_decision_tree_classifier.png' ) }}>
-    </div>
-</div>
+</body>
+
 <!-- Render Charts -->
-<!-- code modified from templates in: https://github.com/lemoncyb/flasked-altair/tree/master/templates-->
 <script type="text/javascript">
-      function parse(url, div) {
+    function parse(url, div) {
         var opt = {
-          mode: "vega-lite",
-          renderer: "svg",
-          actions: {export: true, source: false, editor: false}
+            mode: "vega-lite",
+            renderer: "svg",
+            actions: {export: true, source: false, editor: false}
         };
 
-        vegaEmbed("#"+div, url, opt, function(error, result) {
-          vegaTooltip.vegaLite(result.view, url);
-        });
-      }
+        vegaEmbed("#"+div, url, opt).then(function(result) {
+            vegaTooltip.vegaLite(result.view, url);
+        }).catch(console.error);
+    }
 
-
-      parse("/dt_features", "feature");
+    parse("/dt_features", "feature");  // Change this line to render decision tree features
 </script>
-</body>
 {% endblock %}
